--- a/Review/ReviewIEEE/Review.tex
+++ b/Review/ReviewIEEE/Review.tex
@@ -25,27 +25,30 @@
 \pagenumbering{roman}
 \setcounter{page}{1}
 	
-This paper propose a new estimator for the equivalent number of looks (ENL) and for the texture parameter in the case of multilook polarimetric SAR data. Both estimators are based on the fractional moments of the determinant of the multilook polarimetric covariance matrix. These estimator was compared with other estimators present in the literature, in terms of bias and MSE through a Monte Carlo simulation. 
-Estimators defined in (6) and (7) were used to assess the performance of the ENL estimator submitted. For the texture parameter, the proposal was defined for $\mathcal{K}_d$ and $\mathcal{G}_d$ in equations (9) and (11) respectively, and their yield was compared with those defined in equations (8) and (10).
+This paper proposes new estimators for the equivalent number of looks (ENL) and for the texture parameter in the case of multilook polarimetric SAR data. 
+Both estimators are based on the fractional moments of the determinant of the multilook polarimetric covariance matrix. 
+These estimators were compared with others in terms of bias and MSE through a Monte Carlo simulation. 
+
+Estimators defined in (6) and (7) were used to assess the performance of the proposed ENL estimator. For the texture parameter, the proposal was defined for the $\mathcal{K}_d$ and $\mathcal{G}_d$ distributions in equations (9) and (11) respectively, and their performance was compared with those defined in equations (8) and (10).
 %One is based on the first-order matrix log-cumulant equations of the complex Wishart distribution over a textureless area. The other arises from apply trace moments of the covariance matrix in the case of Whishart and product model.
 
 %The author implements a Monte Carlo simulation to assess the performance of the estimators mentioned, using simulated and real PolSAR data.  
 
-A simulation study was carried out for different sample size, of the form of $2^k, \ k=2, 4, \ldots,10$. A single combination of parameter values was analyzed for the $\mathcal{K}_d$ and $\mathcal{G}_d$ distributions, both for ENL and textured estimators.
+A simulation study was carried out for different sample sizes of the form of $2^k$, $k=2, 4, \ldots,10$. 
+A single combination of parameter values was analyzed for the $\mathcal{K}_d$ and $\mathcal{G}_d$ distributions, both for ENL and textured estimators.
 
-The manuscript present a comparative analysis, but in my opinion, several important components should be addressed and analyzed:
-
+The manuscript presents a comparative analysis, but in my opinion, several important components should be addressed and analyzed:
 \begin{enumerate}
-	\item It should be convenient  to carry out a study of the performance of the estimators proposed for different combination of the parameter values, for the distributions considered. It is desirable considerate an $L$ value less than $10$, to show the behavior of this proposal with a more presence of speckle noise.
-	\item Math properties of equations (5), (9) and (11) should be studied, such as monotonicity and number of roots, etc., to guarantee the existence of a solution of these equations. 
-	\item The estimators propose arises from the solution of equations (5), (9) and (11). These equations were solved numerically, but the method used was not mentioned. Also, nothing was commented on the convergence of the method used.
+	\item It would be convenient  to carry out a study of the performance of the estimators proposed for different combination of the parameter values, for the distributions considered. It is desirable considerate a value of $L$ smaller than $10$, to show the behavior of this proposal under stronger speckle noise.
+	\item Math properties of equations (5), (9) and (11) should be studied, such as monotonicity and number of roots, etc., to guarantee the existence of solutions for these equations. 
+	\item The proposed estimators arise from the solution of equations (5), (9) and (11). These equations were solved numerically, but the method used was not mentioned. Also, nothing was commented on the convergence of the method used.
 	\item Neither is it explained how the right side of the equation (5), which is the same as in equations (9) and (11), was estimated from sample data.
-	\item The results obtained in figure 1(a)-(b) for the $\hat{L}_{A_1}$ estimator are surprising because they show that both, the bias and the mean squared error, set up their values when the sample size increases. It would be convenient to use the same color in these figures when referring to the same estimator. 
+	\item The results obtained in figure 1(a)-(b) for the $\hat{L}_{A_1}$ estimator are surprising because they show that both, the bias and the mean squared error, stabilize when the sample size increases. It would be convenient to use the same color in these figures when referring to the same estimator. 
 	\item Another critical point is the absence of simulated contamination experiments. It would be very useful to do this analysis, to evaluate the robustness of the estimators proposed under contamination data.
 	\item It would be appropriate to present some explanation that makes the author set the $\nu$ value as $1/8$, and the bandwidth for density estimation as $0.1$. 
 	\item Also, a comparison of  the computational time would be convenient. This factor is very important to choose a method for image processing.
 	\item It would be opportune not to cover the graphics with the legends, it happens in figures 1 (c) and (d), figures 2 (c) and (d).
-	\item In lines $32$ to $34$ the author comments that $\mathrm{ln} \, \hat{\alpha}_{A1}(\hat{L}_{A1})$ and $\mathrm{ln} \, \ \hat{\alpha}_{A1}(\hat{L}_{F})$ estimators have a second mode around $12$. I think that this conclusion was obtained from figure 6 (f). This prominence seems to be due more to the choice of bandwidth than to a modal value of the distribution. I suggest testing with other bandwidth values.
+	\item In lines $32$ to $34$ the author comments that ${\ln} \hat{\alpha}_{A1}(\hat{L}_{A1})$ and ${\ln} \hat{\alpha}_{A1}(\hat{L}_{F})$ have a second mode around $12$. I think that this conclusion was obtained from figure 6 (f). This seems to be due more to the choice of bandwidth than to a modal value of the distribution. I suggest testing with other bandwidth values.
 \end{enumerate}
 
 \vspace{0.5cm}
