--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -575,6 +575,15 @@
   timestamp = {2012.12.28}
 }
 
+@article{Bustos1997,
+	author = {Bustos, Oscar},
+	year = {1997},
+	month = {02},
+	pages = {81},
+	title = {Robust Statistics in SAR Image Processing},
+	volume = {407}
+}
+
 @ARTICLE{Canny86,
   author = {J. Canny},
   title = { A {C}omputational {A}pproach to {E}dge {D}etection},
@@ -4877,16 +4886,6 @@
 	ISSN={1545-598X},
 	month={Oct},}
 
-@ARTICLE{Tupin2004,
-author={Tison, C.and Nicolas, J.M. and Tupin, F. and Maitre, H.},
-journal={IEEE Transactions on Geoscience and Remote Sensing},
-title={A new statistical model for Markovian classification of urban areas in high-resolution SAR images},
-year={2014},
-volume={42},
-number={10},
-pages={2046--2057},
-}
-
 @article{cao1995minimum,
 	title={Minimum distance density-based estimation},
 	author={Cao, Ricardo and Cuevas, Antonio and Fraiman, Ricardo},
@@ -5476,6 +5475,55 @@ doi = {10.1109/IGARSS.2017.8127630}
 	year  = {1991}
 }
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Karunamuni2009,
+	author = {Karunamuni, R.J. and Wu, Jingjing},
+	year = {2009},
+	month = {03},
+	pages = {1118-1133},
+	title = {Minimum Hellinger distance estimation in a nonparametric mixture model},
+	volume = {139},
+	booktitle = {Journal of Statistical Planning and Inference - J STATIST PLAN INFER}
+}
 
+@article{HettmanSperger1994,
+	title = "Minimum distance estimators",
+	journal = "Journal of Statistical Planning and Inference",
+	volume = "41",
+	number = "3",
+	pages = "291 - 302",
+	year = "1994",
+	issn = "0378-3758",
+	doi = "https://doi.org/10.1016/0378-3758(94)90025-6",
+	url = "http://www.sciencedirect.com/science/article/pii/0378375894900256",
+	author = "T.P. Hettmansperger and I. Hueter and J. Hüsler",
+	keywords = "Robust, M-estimation, R-estimation, location-scale model, Cramér-von Mises statistic"
+}
 
+@article{Szekely2013,
+	title = "Energy statistics: A class of statistics based on distances",
+	journal = "Journal of Statistical Planning and Inference",
+	volume = "143",
+	number = "8",
+	pages = "1249 - 1272",
+	year = "2013",
+	issn = "0378-3758",
+	doi = "https://doi.org/10.1016/j.jspi.2013.03.018",
+	url = "http://www.sciencedirect.com/science/article/pii/S0378375813000633",
+	author = "Gábor J. Székely and Maria L. Rizzo",
+	keywords = "Energy distance, Goodness-of-fit, Multivariate independence, Distance covariance, Distance correlation"
+}
 
+@article{Song2001,
+	title = "Rényi information, loglikelihood and an intrinsic distribution measure",
+	journal = "Journal of Statistical Planning and Inference",
+	volume = "93",
+	number = "1",
+	pages = "51 - 69",
+	year = "2001",
+	issn = "0378-3758",
+	doi = "https://doi.org/10.1016/S0378-3758(00)00169-5",
+	url = "http://www.sciencedirect.com/science/article/pii/S0378375800001695",
+	author = "Kai-Sheng Song",
+	keywords = "Heavy tails, Intrinsic shape measure, Kurtosis, Loglikelihood moments, Multivariate , Rényi information, Spectrum, Trigamma function"
+}
